#167 remove antique padding from pageContainer to fix double scroll-bar

--- a/components/list/projectList.module.css
+++ b/components/list/projectList.module.css
@@ -6,7 +6,6 @@
   min-height: 100vh;
   margin: auto;
   position: relative;
-  padding-bottom: 2rem;
 }
 
 .projectContainer {
